[gd_scene load_steps=23 format=3 uid="uid://c3vqs430qpt8w"]

[ext_resource type="Script" uid="uid://dwslumjomkd1t" path="res://scripts/game/game_manager.gd" id="1_264po"]
[ext_resource type="Script" uid="uid://bc14d6efnxlji" path="res://scripts/game/global_spawner.gd" id="2_1kice"]
[ext_resource type="Script" uid="uid://s78nwwn8edpf" path="res://scripts/entities/camera.gd" id="3_5newe"]
[ext_resource type="Script" uid="uid://dxl46mtiurx1v" path="res://scripts/game/death_trigger.gd" id="4_37s47"]
[ext_resource type="PackedScene" uid="uid://cmsarojf16j7v" path="res://scenes/player_death_lights.tscn" id="5_bt5mj"]
[ext_resource type="Texture2D" uid="uid://dtnwcnfkt2acg" path="res://sprites/icon.svg" id="6_e1j6l"]
[ext_resource type="Script" uid="uid://b6it1roy42jng" path="res://scripts/player/input_service.gd" id="7_pl11u"]
[ext_resource type="Script" uid="uid://8rxwnnipho2p" path="res://scripts/levels/level_spawner.gd" id="8_bhx41"]
[ext_resource type="Resource" uid="uid://dvblvmsdlica3" path="res://levels/base.res" id="9_qnb83"]
[ext_resource type="PackedScene" uid="uid://dmdtse0r0jamm" path="res://scenes/player.tscn" id="10_sww3w"]
[ext_resource type="Texture2D" uid="uid://2vbhnrd33wum" path="res://sprites/pull_circle_blue.png" id="11_suyxu"]
[ext_resource type="Script" uid="uid://821p0psjcurb" path="res://scripts/player/pull_circle.gd" id="12_sgl2t"]
[ext_resource type="Texture2D" uid="uid://brfdkje3vphic" path="res://sprites/pull_circle_dark_grey.png" id="13_qouja"]
[ext_resource type="Script" uid="uid://blswevpfmnusx" path="res://scripts/levels/level_spawn_trigger.gd" id="14_wljb1"]
[ext_resource type="PackedScene" uid="uid://cflkesovqb44q" path="res://scenes/hud.tscn" id="15_v2yb1"]
[ext_resource type="PackedScene" uid="uid://dm3ht1lv7fpou" path="res://scenes/death_screen.tscn" id="16_js0lu"]
[ext_resource type="Script" uid="uid://dnoeb3fn86sbl" path="res://scripts/player/player_stats.gd" id="17_gxtfn"]
[ext_resource type="Script" uid="uid://ce1isg2vm823x" path="res://scripts/player/pull_dragline.gd" id="18_twgab"]
[ext_resource type="Script" uid="uid://bhhvu1j2kktg0" path="res://scripts/player/player_safe_spot.gd" id="20_1kice"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eow3j"]
size = Vector2(256, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7jktm"]
size = Vector2(160, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_264po"]
atlas = ExtResource("6_e1j6l")

[node name="Game" type="Node2D" node_paths=PackedStringArray("_player")]
script = ExtResource("1_264po")
_base_stamina_drain_amount = 0.033
debug = true
_player = NodePath("Player")

[node name="GlobalSpawner" type="Node2D" parent="."]
script = ExtResource("2_1kice")

[node name="Camera" type="Camera2D" parent="." node_paths=PackedStringArray("_follow_target")]
zoom = Vector2(4, 4)
position_smoothing_enabled = true
position_smoothing_speed = 3.0
script = ExtResource("3_5newe")
_follow_target = NodePath("../Player")

[node name="DeathTrigger" type="Area2D" parent="Camera"]
position = Vector2(0, 89)
collision_layer = 0
collision_priority = 5.0
priority = 5
script = ExtResource("4_37s47")
vfx = ExtResource("5_bt5mj")

[node name="Shape" type="CollisionShape2D" parent="Camera/DeathTrigger"]
shape = SubResource("RectangleShape2D_eow3j")

[node name="Sprite" type="Sprite2D" parent="Camera/DeathTrigger"]
visible = false
scale = Vector2(1.97784, 0.137882)
texture = ExtResource("6_e1j6l")

[node name="InputService" type="Node" parent="." node_paths=PackedStringArray("_pull_origin")]
script = ExtResource("7_pl11u")
_pull_origin = NodePath("../Player")

[node name="LevelSpawner" type="Node2D" parent="." node_paths=PackedStringArray("_spawn_trigger")]
script = ExtResource("8_bhx41")
_level_path = "res://levels/"
_initial_level = ExtResource("9_qnb83")
_spawn_trigger = NodePath("../LevelSpawnTrigger")

[node name="Player" parent="." instance=ExtResource("10_sww3w")]
position = Vector2(0, -4)

[node name="PullCircle" type="Sprite2D" parent="Player"]
texture = ExtResource("11_suyxu")
script = ExtResource("12_sgl2t")
_active_sprite = ExtResource("11_suyxu")
_inactive_sprite = ExtResource("13_qouja")
_start_active = false

[node name="LevelSpawnTrigger" type="Area2D" parent="."]
position = Vector2(0, 135)
collision_layer = 0
monitorable = false
priority = 1
script = ExtResource("14_wljb1")

[node name="Collider" type="CollisionShape2D" parent="LevelSpawnTrigger"]
shape = SubResource("RectangleShape2D_7jktm")

[node name="Sprite2D" type="Sprite2D" parent="LevelSpawnTrigger"]
visible = false
scale = Vector2(1.23287, 0.04)
texture = ExtResource("6_e1j6l")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Hud" parent="UI" instance=ExtResource("15_v2yb1")]

[node name="DeathScreen" parent="UI" instance=ExtResource("16_js0lu")]

[node name="PlayerStats" type="Node" parent="."]
script = ExtResource("17_gxtfn")
debug = true

[node name="PullDragline" type="Line2D" parent="." node_paths=PackedStringArray("_fixed_endpoint")]
width = 1.0
default_color = Color(0.160708, 0.674632, 0.996078, 1)
script = ExtResource("18_twgab")
_fixed_endpoint = NodePath("../Player")

[node name="PlayerSafeSpot" type="VisibleOnScreenNotifier2D" parent="."]
rect = Rect2(-0.5, -0.5, 1, 1)
script = ExtResource("20_1kice")

[node name="Sprite2D" type="Sprite2D" parent="PlayerSafeSpot"]
scale = Vector2(0.0195312, 0.0195312)
texture = SubResource("AtlasTexture_264po")

[connection signal="on_game_over" from="." to="UI/DeathScreen" method="show"]
[connection signal="score_updated" from="." to="PlayerStats" method="update_score"]
[connection signal="stamina_drained" from="." to="PlayerStats" method="change_stamina"]
[connection signal="body_entered" from="Camera/DeathTrigger" to="Camera/DeathTrigger" method="_on_body_entered"]
[connection signal="player_fell" from="Camera/DeathTrigger" to="Player/PullCircle" method="show"]
[connection signal="player_fell" from="Camera/DeathTrigger" to="PlayerStats" method="decrease_lives"]
[connection signal="player_fell_here" from="Camera/DeathTrigger" to="Player" method="_on_player_fell"]
[connection signal="move_input_change" from="InputService" to="Player" method="_on_input_service_move_input_change"]
[connection signal="pull_input_change" from="InputService" to="Player" method="_on_input_service_pull_input_change"]
[connection signal="pull_input_change" from="InputService" to="PullDragline" method="pull_update"]
[connection signal="pull_press" from="InputService" to="Player" method="_on_input_service_pull_press"]
[connection signal="pull_press" from="InputService" to="Player/PullCircle" method="set_active"]
[connection signal="pull_press" from="InputService" to="PullDragline" method="pull_set_active" binds= [true]]
[connection signal="pull_release" from="InputService" to="Player" method="_on_input_service_pull_release"]
[connection signal="pull_release" from="InputService" to="Player/PullCircle" method="set_inactive"]
[connection signal="pull_release" from="InputService" to="PullDragline" method="hide"]
[connection signal="pull_release" from="InputService" to="PullDragline" method="pull_set_active" binds= [false]]
[connection signal="new_level_spawned" from="LevelSpawner" to="LevelSpawnTrigger" method="enqueue_elevation"]
[connection signal="external_danger_entered" from="Player" to="Player/PullCircle" method="hide"]
[connection signal="external_set_safe_spot" from="Player" to="PlayerSafeSpot" method="set_global_position"]
[connection signal="external_stamina_restore" from="Player" to="PlayerStats" method="change_stamina"]
[connection signal="body_entered" from="LevelSpawnTrigger" to="LevelSpawnTrigger" method="_on_player_entered"]
[connection signal="player_entered" from="LevelSpawnTrigger" to="LevelSpawner" method="spawn_new_level"]
[connection signal="health_updated" from="PlayerStats" to="UI/Hud" method="_on_health_updated"]
[connection signal="player_died" from="PlayerStats" to="." method="game_over"]
[connection signal="score_updated" from="PlayerStats" to="UI/Hud" method="_on_score_updated"]
[connection signal="stamina_updated" from="PlayerStats" to="UI/Hud" method="_on_stamina_updated"]
[connection signal="screen_entered" from="PlayerSafeSpot" to="PlayerSafeSpot" method="_on_screen_entered"]
[connection signal="screen_entered" from="PlayerSafeSpot" to="Player" method="_on_safe_spot_updated" binds= [true]]
[connection signal="screen_exited" from="PlayerSafeSpot" to="PlayerSafeSpot" method="_on_screen_exited"]
[connection signal="screen_exited" from="PlayerSafeSpot" to="Player" method="_on_safe_spot_updated" binds= [false]]
